@@ -9280,6 +9280,378 @@ toupper
 \end_layout
 
 \begin_layout Subsection
+Out-of-place quoting transforms
+\end_layout
+
+\begin_layout LyX-Code
+
+\series bold
+#include
+\series default
+ <libHX/string.h>
+\begin_inset Index
+status open
+
+\begin_layout Plain Layout
+
+\family typewriter
+libHX/string.h
+\end_layout
+
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+
+\series bold
+char *
+\series default
+HX_strquote(
+\series bold
+const char *
+\series default
+s, 
+\series bold
+unsigned int
+\series default
+ type, 
+\series bold
+char **
+\series default
+free_me);
+\begin_inset Index
+status open
+
+\begin_layout Plain Layout
+
+\family typewriter
+HX_strquote
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\family typewriter
+HX_strquote
+\family default
+ will escape metacharacters in a string according to 
+\family typewriter
+type
+\family default
+, and returns the escaped result.
+\end_layout
+
+\begin_layout Standard
+Possible values for 
+\family typewriter
+type
+\family default
+:
+\end_layout
+
+\begin_layout Description
+
+\family typewriter
+HXQUOTE_SQUOTE
+\family default
+
+\begin_inset Index
+status open
+
+\begin_layout Plain Layout
+
+\family typewriter
+HXQUOTE_SQUOTE
+\end_layout
+
+\end_inset
+
+ Escape all single quotes and backslashes in a string with a backslash.
+ (
+\begin_inset Quotes eld
+\end_inset
+
+Ol' 
+\backslash
+Backslash
+\begin_inset Quotes erd
+\end_inset
+
+ 
+\begin_inset Formula $\rightarrow$
+\end_inset
+
+ 
+\begin_inset Quotes eld
+\end_inset
+
+Ol
+\backslash
+' 
+\backslash
+
+\backslash
+Backslash
+\begin_inset Quotes erd
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Description
+
+\family typewriter
+HXQUOTE_DQUOTE
+\family default
+
+\begin_inset Index
+status open
+
+\begin_layout Plain Layout
+
+\family typewriter
+HXQUOTE_DQUOTE
+\end_layout
+
+\end_inset
+
+ Escape all double quotes and backslahes in a string with the backslash
+ method.
+ (
+\begin_inset Quotes eld
+\end_inset
+
+Ol
+\begin_inset Quotes erd
+\end_inset
+
+ 
+\backslash
+Backslash
+\begin_inset Quotes erd
+\end_inset
+
+ 
+\begin_inset Formula $\rightarrow$
+\end_inset
+
+ 
+\begin_inset Quotes eld
+\end_inset
+
+Ol
+\backslash
+
+\begin_inset Quotes erd
+\end_inset
+
+ 
+\backslash
+
+\backslash
+Backslash
+\begin_inset Quotes erd
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Description
+
+\family typewriter
+HXQUOTE_HTML
+\family default
+
+\begin_inset Index
+status open
+
+\begin_layout Plain Layout
+
+\family typewriter
+HXQUOTE_HTML
+\end_layout
+
+\end_inset
+
+ Escape '
+\family typewriter
+<
+\family default
+', '
+\family typewriter
+>
+\family default
+', '
+\family typewriter
+&
+\family default
+' and '"' by their respective HTML entities 
+\family typewriter
+&lt;
+\family default
+, 
+\family typewriter
+&gt;
+\family default
+, 
+\family typewriter
+&amp;
+\family default
+ and 
+\family typewriter
+&quot;
+\family default
+.
+\end_layout
+
+\begin_layout Standard
+If 
+\family typewriter
+free_me
+\family default
+ is 
+\family typewriter
+NULL
+\family default
+, the function will always allocate memory, even if the string needs no
+ quoting.
+ The program then has to free the result:
+\end_layout
+
+\begin_layout LyX-Code
+
+\series bold
+char *
+\series default
+s = HX_strquote("<head>", HXQUOTE_HTML, NULL);
+\begin_inset Newline newline
+\end_inset
+
+printf("%s
+\backslash
+n", s);
+\begin_inset Newline newline
+\end_inset
+
+free(s);
+\end_layout
+
+\begin_layout Standard
+If 
+\family typewriter
+free_me
+\family default
+ is not 
+\family typewriter
+NULL
+\family default
+ however, the function will put the pointer to the memory area into 
+\family typewriter
+*free_me
+\family default
+, if the string needed quoting.
+ The program then has to free that after it is done with the quoted result:
+\end_layout
+
+\begin_layout LyX-Code
+
+\series bold
+char *
+\series default
+tmp = NULL;
+\begin_inset Newline newline
+\end_inset
+
+
+\series bold
+char *
+\series default
+s = HX_strquote("head", HXQUOTE_HTML, &tmp);
+\begin_inset Newline newline
+\end_inset
+
+printf("%s
+\backslash
+n", s);
+\begin_inset Newline newline
+\end_inset
+
+free(tmp);
+\end_layout
+
+\begin_layout Standard
+
+\family typewriter
+tmp
+\family default
+ could be 
+\family typewriter
+NULL
+\family default
+, and since 
+\family typewriter
+free(NULL)
+\family default
+ is not an error, this is perfectly valid.
+ Furthermore, if 
+\family typewriter
+*free_me
+\family default
+ is not 
+\family typewriter
+NULL
+\family default
+ by the time 
+\family typewriter
+HX_strquote
+\family default
+ is called, the function will free it.
+ This makes it possible to call 
+\family typewriter
+HX_strquote
+\family default
+ in succession without 
+\family typewriter
+free
+\family default
+s in between:
+\end_layout
+
+\begin_layout LyX-Code
+
+\series bold
+char *
+\series default
+tmp = NULL;
+\begin_inset Newline newline
+\end_inset
+
+printf("%s
+\backslash
+n", HX_strquote("<html>", HXQUOTE_HTML, &tmp));
+\begin_inset Newline newline
+\end_inset
+
+printf("%s
+\backslash
+n", HX_strquote("<head>", HXQUOTE_HTML, &tmp));
+\begin_inset Newline newline
+\end_inset
+
+free(tmp);
+\end_layout
+
+\begin_layout Subsection
 Tokenizing
 \end_layout
 
